<resources>
    <string name="app_name">Android-Passenger</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="Login_button">LOGIN</string>
    <string name="signUp_button">SIGN UP</string>
    <string name="title_activity_passenger_homepage">passengerHomepage</string>
    <string name="viewRides_button">VIEW MY RIDES</string>
    <string name="search_button">SEARCH A RIDE</string>
    <string name="title_activity_list_ads">ListAds</string>
    <string name="action_settings">Settings</string>
    <string name="listAdsStartingPosition_hint">Choose starting point...</string>
    <string name="listAdsEndingPosition_hint">Choose destination...</string>
    <string name="individual_journey_activity" />
    <string name="newpassenger_submit">Submit</string>
    <string name="newdriverName_hint">Name?</string>
    <string name="newpassengerEmail_hint">Email?</string>
    <string name="newpassengerBirth_hint">Birthday (DD/MM/YYYY)?</string>
    <string name="newpassengerPhoneNumber_hint">Phone number?</string>

    <string-array name="filters">
        <item>Distance</item>
        <item>Price</item>
        <item>Vehicle make</item>
    </string-array>
    <string name="title_activity_my_journeys">MyJourneys</string>

</resources>
